# fugue

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fugue.toml.example  index.html  release-plz.toml
.github/workflows/: docker.yml  docs.yml  release.yml
dev/: crates.js  help.html  settings.html  src-files.js
dev/fugue/: all.html  enum.ApiKeyAction.html  enum.Commands.html  enum.FriendAction.html  enum.PlaylistAction.html  fn.api_key.html  fn.build_backends.html  fn.check.html  fn.friend.html  fn.init_db.html  fn.main.html  fn.playlist.html  fn.serve.html  fn.status.html  fn.sync.html  fn.ticket.html  index.html  sidebar-items.js  struct.Cli.html
dev/search.index/: 00cac86a02cd.js  02563edcd8b1.js  0345c31e8ea7.js  054dbc3f5f7b.js  05bd5ad9e312.js  0600475f529c.js  080d4f31749e.js  0941034f4482.js  095310c33d81.js  0a72632ad262.js  0ad3c05499ed.js  0bbce93d35af.js  0c8685188762.js  0c89289448ce.js  0ce82a913d3e.js  0cfe4ecb22a0.js  0e7a6579141d.js  0eb3d40aa693.js  0f107e9bbf0a.js  11576dc31011.js  126e3586bcee.js  12e6e282f8cb.js  13c5fcbc6fc5.js  14ee4712a6bf.js  159dcaabe789.js  179a813f06cc.js  182c4f37071f.js  195672fe8a2c.js  19847f8191d5.js  1de9290ee264.js  1e596bd9b508.js  1f600767a979.js  236fce5dee6b.js  2381c471ee4d.js  2415d3a28855.js  275daf5f04cf.js  27991566145d.js  28b4c21a2ec6.js  28e88a69f32e.js  2932715f4019.js  (+90 more)
migrations/: 00001_initial.sql  00002_dedup.sql  00003_playlists.sql  00004_favorites.sql  00005_social.sql  00006_collab_playlists.sql  00007_playlist_members.sql  00008_crdt_ops.sql  00009_playback.sql  00010_api_keys.sql
src/: config.rs  error.rs  id.rs  main.rs  state.rs
src/cache/: db.rs  mod.rs  refresh.rs
src/dedup/: matcher.rs  mod.rs  resolver.rs
src/health/: probe.rs
src/proxy/: backend.rs  fanout.rs  mod.rs  router.rs  stream.rs
src/social/: activity.rs  bandwidth.rs  collab_playlist.rs  crdt.rs  friends.rs  library.rs  mod.rs  node.rs  party.rs  protocol.rs  service.rs  subsonic_bridge.rs
src/subsonic/: annotation.rs  auth.rs  browsing.rs  extras.rs  favorites_db.rs  lists.rs  media.rs  mod.rs  models.rs  (+6 more)
(+473 files in other folders)
