[package]
name = "fugue"
version = "0.1.5"
edition = "2021"
description = "Smart Subsonic API proxy that merges multiple Navidrome instances"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.39", features = ["serialize"] }
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
base64 = "0.22"
md-5 = "0.10"
rand = "0.9"
sha2 = "0.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
http-body-util = "0.1"
bytes = "1"
hex = "0.4"
form_urlencoded = "1"
anyhow = "1"
blake3 = "1"
iroh = "0.96"
iroh-base = "0.96"
iroh-docs = "0.96"
iroh-gossip = "0.96"
iroh-blobs = "0.98"
